cmake_minimum_required(VERSION 3.28)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(128-longest-consecutive-sequence leetcode/editor/cn/128-longest-consecutive-sequence.cpp)
add_executable(283-move-zeroes leetcode/editor/cn/283-move-zeroes.cpp)
add_executable(11-container-with-most-water leetcode/editor/cn/11-container-with-most-water.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(42-trapping-rain-water leetcode/editor/cn/42-trapping-rain-water.cpp)
add_executable(438-find-all-anagrams-in-a-string leetcode/editor/cn/438-find-all-anagrams-in-a-string.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(560-subarray-sum-equals-k leetcode/editor/cn/560-subarray-sum-equals-k.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)
add_executable(76-minimum-window-substring leetcode/editor/cn/76-minimum-window-substring.cpp)
add_executable(160-intersection-of-two-linked-lists leetcode/editor/cn/160-intersection-of-two-linked-lists.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)