cmake_minimum_required(VERSION 3.28)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(128-longest-consecutive-sequence leetcode/editor/cn/128-longest-consecutive-sequence.cpp)
add_executable(283-move-zeroes leetcode/editor/cn/283-move-zeroes.cpp)
add_executable(11-container-with-most-water leetcode/editor/cn/11-container-with-most-water.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(42-trapping-rain-water leetcode/editor/cn/42-trapping-rain-water.cpp)
add_executable(438-find-all-anagrams-in-a-string leetcode/editor/cn/438-find-all-anagrams-in-a-string.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(560-subarray-sum-equals-k leetcode/editor/cn/560-subarray-sum-equals-k.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)
add_executable(76-minimum-window-substring leetcode/editor/cn/76-minimum-window-substring.cpp)
add_executable(160-intersection-of-two-linked-lists leetcode/editor/cn/160-intersection-of-two-linked-lists.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)
add_executable(53-maximum-subarray leetcode/editor/cn/53-maximum-subarray.cpp)
add_executable(234-palindrome-linked-list leetcode/editor/cn/234-palindrome-linked-list.cpp)
add_executable(141-linked-list-cycle leetcode/editor/cn/141-linked-list-cycle.cpp)
add_executable(142-linked-list-cycle-ii leetcode/editor/cn/142-linked-list-cycle-ii.cpp)
add_executable(21-merge-two-sorted-lists leetcode/editor/cn/21-merge-two-sorted-lists.cpp)
add_executable(2-add-two-numbers leetcode/editor/cn/2-add-two-numbers.cpp)
add_executable(19-remove-nth-node-from-end-of-list leetcode/editor/cn/19-remove-nth-node-from-end-of-list.cpp)
add_executable(24-swap-nodes-in-pairs leetcode/editor/cn/24-swap-nodes-in-pairs.cpp)
add_executable(25-reverse-nodes-in-k-group leetcode/editor/cn/25-reverse-nodes-in-k-group.cpp)
add_executable(148-sort-list leetcode/editor/cn/148-sort-list.cpp)
add_executable(146-lru-cache leetcode/editor/cn/146-lru-cache.cpp)
add_executable(94-binary-tree-inorder-traversal leetcode/editor/cn/94-binary-tree-inorder-traversal.cpp)
add_executable(102-binary-tree-level-order-traversal leetcode/editor/cn/102-binary-tree-level-order-traversal.cpp)
add_executable(104-maximum-depth-of-binary-tree leetcode/editor/cn/104-maximum-depth-of-binary-tree.cpp)
add_executable(226-invert-binary-tree leetcode/editor/cn/226-invert-binary-tree.cpp)
add_executable(101-symmetric-tree leetcode/editor/cn/101-symmetric-tree.cpp)
add_executable(543-diameter-of-binary-tree leetcode/editor/cn/543-diameter-of-binary-tree.cpp)
add_executable(108-convert-sorted-array-to-binary-search-tree leetcode/editor/cn/108-convert-sorted-array-to-binary-search-tree.cpp)
add_executable(98-validate-binary-search-tree leetcode/editor/cn/98-validate-binary-search-tree.cpp)
add_executable(230-kth-smallest-element-in-a-bst leetcode/editor/cn/230-kth-smallest-element-in-a-bst.cpp)
add_executable(199-binary-tree-right-side-view leetcode/editor/cn/199-binary-tree-right-side-view.cpp)
add_executable(114-flatten-binary-tree-to-linked-list leetcode/editor/cn/114-flatten-binary-tree-to-linked-list.cpp)
add_executable(105-construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105-construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(437-path-sum-iii leetcode/editor/cn/437-path-sum-iii.cpp)
add_executable(236-lowest-common-ancestor-of-a-binary-tree leetcode/editor/cn/236-lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(124-binary-tree-maximum-path-sum leetcode/editor/cn/124-binary-tree-maximum-path-sum.cpp)
add_executable(200-number-of-islands leetcode/editor/cn/200-number-of-islands.cpp)
add_executable(994-rotting-oranges leetcode/editor/cn/994-rotting-oranges.cpp)
add_executable(207-course-schedule leetcode/editor/cn/207-course-schedule.cpp)
add_executable(208-implement-trie-prefix-tree leetcode/editor/cn/208-implement-trie-prefix-tree.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(74-search-a-2d-matrix leetcode/editor/cn/74-search-a-2d-matrix.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(33-search-in-rotated-sorted-array leetcode/editor/cn/33-search-in-rotated-sorted-array.cpp)
add_executable(153-find-minimum-in-rotated-sorted-array leetcode/editor/cn/153-find-minimum-in-rotated-sorted-array.cpp)
add_executable(4-median-of-two-sorted-arrays leetcode/editor/cn/4-median-of-two-sorted-arrays.cpp)
add_executable(20-valid-parentheses leetcode/editor/cn/20-valid-parentheses.cpp)
add_executable(155-min-stack leetcode/editor/cn/155-min-stack.cpp)
add_executable(287-find-the-duplicate-number leetcode/editor/cn/287-find-the-duplicate-number.cpp)
add_executable(9-palindrome-number leetcode/editor/cn/9-palindrome-number.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(54-spiral-matrix leetcode/editor/cn/54-spiral-matrix.cpp)
add_executable(885-spiral-matrix-iii leetcode/editor/cn/885-spiral-matrix-iii.cpp)